--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "objection": "^3.0.1"
+  },
+  "devDependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
