--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "objection": "^3.0.1"
   },
   "devDependencies": {
+    "base64-img": "^1.0.4",
     "bcrypt-nodejs": "^0.0.3",
     "crypto-js": "^4.1.1",
     "jssha": "^3.3.0",
     "mysql": "^2.18.1",
-    "mysqldump": "^3.2.0"
+    "mysqldump": "^3.2.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.1.0"
   }
 }
