--- a/env.example
+++ b/env.example
@@ -4,3 +4,10 @@ DB_PASS=''
 DB_NAME=''
 TYPE_SQL='mysql'
 DB_PORT=3306
+
+EMAIL_HOST='smtp.office365.com'
+EMAIL_PORT='587'
+EMAIL_USER=''
+EMAIL_PASS=''
+
+USER_TOKEN_GENERATE_SECRET=''
