--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "base64-img": "^1.0.4",
     "bcrypt-nodejs": "^0.0.3",
     "crypto-js": "^4.1.1",
+    "jsonwebtoken": "^9.0.0",
     "jssha": "^3.3.0",
     "mysql": "^2.18.1",
     "mysqldump": "^3.2.0",
