--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "objection": "^3.0.1"
   },
   "devDependencies": {
+    "axios": "^1.3.4",
     "base64-img": "^1.0.4",
     "bcrypt-nodejs": "^0.0.3",
     "crypto-js": "^4.1.1",
