--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/mvmes2/TibiaProject-site-BackEnd#readme",
   "dependencies": {
     "consign": "^0.1.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
@@ -30,6 +29,7 @@
     "axios": "^1.3.4",
     "base64-img": "^1.0.4",
     "bcrypt-nodejs": "^0.0.3",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "jsonwebtoken": "^9.0.0",
@@ -37,6 +37,7 @@
     "mysql": "^2.18.1",
     "mysqldump": "^3.2.0",
     "nodemailer": "^6.9.1",
-    "nodemailer-express-handlebars": "^6.1.0"
+    "nodemailer-express-handlebars": "^6.1.0",
+    "socket.io": "^4.6.1"
   }
 }
