--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "nodemon": "^2.0.20",
-    "objection": "^3.0.1"
+    "objection": "^3.0.1",
+    "stripe": "^11.16.0"
   },
   "devDependencies": {
     "axios": "^1.3.4",
