--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/mvmes2/TibiaProject-site-BackEnd#readme",
   "dependencies": {
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
     "consign": "^0.1.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
     "objection": "^3.0.1",
     "stripe": "^11.16.0"
