--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
   "dependencies": {
     "@prismicio/client": "^6.7.3",
     "@prismicio/helpers": "^2.3.9",
+    "compress-images": "^2.0.5",
+    "compression": "^1.7.4",
     "consign": "^0.1.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gifsicle": "^5.2.1",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
     "objection": "^3.0.1",
+    "sharp": "^0.32.0",
     "stripe": "^11.16.0"
   },
   "devDependencies": {
@@ -39,6 +47,7 @@
     "date-fns": "^2.29.3",
     "jsonwebtoken": "^9.0.0",
     "jssha": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysqldump": "^3.2.0",
     "nodemailer": "^6.9.1",
