--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "knex": "^2.4.2",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
