feito cache interno no serverSide em world list na rota GET /getWorld-list, guild list na rota GET /User-get-guildList, characterSearch na rota GET /getWorldWide-characters

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 client.zip
 ./client.zip
 /src/main/resources/tickets-images/compressed/*
+/src/main/resources/tickets-images/*
 /downloads/*
 /client/*
 client/*
