--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "knex": "^2.4.2",
     "mercadopago": "^1.5.17",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
