--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon",
+    "serve:prod": "sudo cp prod.env .env && node -r newrelic server.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
+    "newrelic": "^11.2.1",
     "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
     "objection": "^3.1.2",
