--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "newrelic": "^11.2.1",
+    "node-cron": "^3.0.2",
     "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
     "objection": "^3.1.2",
